@@ -1,2 +1,3 @@
 MooseX-ClassCompositor-*
 .build
+.gitnxtver_cache
