@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - role modules are allowed to fail to load; if they fail to be set up,
+          the process will still fail, but this permits roles embedded in other
+          module files
 
 0.008     2013-10-20 16:02:57 America/New_York
           replace Class::MOP::load_class with Class::Load
